# Remote_data_acquisition_system

./: BC260Y_AT_CMD.txt  BC260Y_COD_MQTT.ioc  README.md
Core/Inc/: BC260Y.h  COD.h  main.h  stm32f1xx_it.h
Core/Src/: BC260Y.c  COD.c  gpio.c  main.c  stm32f1xx_it.c  usart.c
MDK-ARM/: .clangd  BC260Y_COD_MQTT+BC260YCODMQTT.cbuild.yml  BC260Y_COD_MQTT+BC260YCODMQTT.cprj  BC260Y_COD_MQTT.cbuild-idx.yml  BC260Y_COD_MQTT.cbuild-set.yml  BC260Y_COD_MQTT.cproject.yml  BC260Y_COD_MQTT.csolution.yml  BC260Y_COD_MQTT.uvguix.Michael_Chemic  BC260Y_COD_MQTT.uvoptx  BC260Y_COD_MQTT.uvprojx
MDK-ARM/BC260Y_COD_MQTT/: BC260Y_COD_MQTT.axf  BC260Y_COD_MQTT.build_log.htm  BC260Y_COD_MQTT.hex  BC260Y_COD_MQTT.htm  BC260Y_COD_MQTT.lnp  BC260Y_COD_MQTT.map  BC260Y_COD_MQTT_BC260Y_COD_MQTT.dep  bc260y.d  cod.d  crc.d  gpio.d  main.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_crc.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.d  stm32f1xx_hal_uart.d  stm32f1xx_it.d  system_stm32f1xx.d  usart.d
MDK-ARM/RTE/_BC260YCODMQTT/: RTE_Components.h
MDK-ARM/RTE/_BC260Y_COD_MQTT/: RTE_Components.h
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MDK-ARM/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/BC260Y_COD_MQTT+BC260YCODMQTT/: CMakeLists.txt  groups.cmake
MDK-ARM/tmp/BC260Y_COD_MQTT+BC260YCODMQTT/src/BC260Y_COD_MQTT+BC260YCODMQTT-stamp/: BC260Y_COD_MQTT+BC260YCODMQTT-configure-.cmake  BC260Y_COD_MQTT+BC260YCODMQTT-source_dirinfo.txt
MDK-ARM/tmp/BC260Y_COD_MQTT+BC260YCODMQTT/tmp/: BC260Y_COD_MQTT+BC260YCODMQTT-cfgcmd.txt  BC260Y_COD_MQTT+BC260YCODMQTT-mkdirs.cmake
MDK-ARM/tmp/BC260Y_COD_MQTT/BC260YCODMQTT/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
移远BC260Y_NB模块资料/BC260Y核心板资料/BC260Y核心板资料/单片机参考代码/01_BC260Y发(模拟)温湿度例程DUP传数据/CORE/: startup_stm32f10x_md.s
移远BC260Y_NB模块资料/BC260Y核心板资料/BC260Y核心板资料/单片机参考代码/01_BC260Y发(模拟)温湿度例程DUP传数据/USER/: Test.axf  Test.build_log.htm  Test.hex  Test.htm  Test.map  Test.plg  Test.uvgui.Administrator  Test.uvgui.steven  Test.uvgui_Administrator.bak  Test.uvgui_steven.bak  Test.uvguix.Administrator  Test.uvopt  Test.uvoptx  Test.uvprojx  Test_Target 1.dep  Test_uvopt.bak  Test_uvproj.bak  bc26.crf  bc260y.crf  core_cm3.d  delay.crf  dht11.crf  led.crf  main.c  main.crf  main.d  misc.crf  rs485.crf  startup_stm32f10x_md.lst  stm32f10x_adc.crf  stm32f10x_bkp.crf  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dac.d  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_dma.d  (+23 more)
移远BC260Y_NB模块资料/BC260Y核心板资料/BC260Y核心板资料/单片机参考代码/02_BC260Y发(模拟)温湿度例程TCP传数据/USER/: Test.axf  Test.build_log.htm  Test.hex  Test.htm  Test.lnp  Test.map  Test.plg  Test.uvgui.steven  Test.uvgui_Administrator.bak  Test.uvguix.Administrator  Test.uvguix.Michael_Chemic  Test.uvopt  Test.uvoptx  Test.uvproj.saved_uv4  Test.uvprojx  Test_Target 1.dep  bc26.crf  bc260y.crf  delay.d  dht11.crf  led.crf  main.c  main.crf  startup_stm32f10x_md.lst  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_flash.crf  stm32f10x_gpio.crf  stm32f10x_iwdg.crf  stm32f10x_rtc.crf  stm32f10x_rtc.d  stm32f10x_tim.crf  stm32f10x_wwdg.crf  timer.crf  usart.crf  usart.d  wdg.crf
移远BC260Y_NB模块资料/BC260Y核心板资料/BC260Y核心板资料/单片机参考代码/03_BC260Y操作MQTT基础代码/USER/: Test.build_log.htm  Test.hex  Test.uvguix.Administrator  Test.uvguix.Michael_Chemic  Test.uvoptx  Test.uvprojx  Test_Target 1.dep  bc260y.d  core_cm3.d  delay.d  dht11.d  led.d  main.c  main.d  misc.d  stm32f10x_adc.d  stm32f10x_bkp.d  stm32f10x_can.d  stm32f10x_cec.d  stm32f10x_crc.d  sys.d  (+22 more)
移远开发工具/QCOM_V1.6/: Config.ini  TP.ini
(+91 files in other folders)
